# kart

./: .gitignore  Cargo.toml  input.manager  input_cheat.manager  wasm-pack.ps1  wasm-pack.sh
.github/workflows/: typos.yml
assets/: README.md
assets/blends/: kart.blend  monster_truck.blend  muscle.blend  police.blend  sedan.blend  sports.blend
assets/karts/: kart.glb  monster_truck.glb  muscle.glb  police.glb  sedan.glb  sports.glb
assets/terrains/: map01.glb
game/: .gitignore  index.html
src/: assets.rs  camera.rs  kart.rs  main.rs
src/debug/: input.rs  mod.rs  screen.rs
src/input/: camera.rs  mod.rs
src/physics/: collider.rs  mod.rs
