[package]
name = "kart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
leafwing-input-manager = "0.10.0"
ron = "0.8.1"
serde = { version = "1.0.189", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[profile.dev.package."*"]
opt-level = 3 # Compiles dependencies with optimizations

[features]
debug_input = []
debug_all = ["debug_input"]
