[package]
name = "kart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_asset_loader = { version = "0.17.0", features = ["3d"] }
bevy_debug_grid = { version = "0.2.1", optional = true }
bevy_gltf_components = "0.1.3"
leafwing-input-manager = "0.10.0"
ron = "0.8.1"
serde = { version = "1.0.189", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[profile.dev.package."*"]
opt-level = 3 # Compiles dependencies with optimizations

[features]
debug_input = []

# debug_screen enables the debug screen plugin
# No values are logged by default
debug_screen = []
debug_screen_all = [
    "debug_screen_fps",
    "debug_screen_position",
    "debug_screen_camera",
    "debug_screen_speed",
]
debug_screen_fps = ["debug_screen"]
debug_screen_position = ["debug_screen"]
debug_screen_camera = ["debug_screen"]
debug_screen_speed = ["debug_screen"]

# debug_axis enables the X/Y/Z axis and adds a grid
debug_axis = ["debug_screen", "dep:bevy_debug_grid"]

cheat = []
cheat_all = ["cheat_input_target", "cheat_kart_change"]
cheat_input_target = ["cheat"]                          # Toggles target input between camera / player
cheat_kart_change = ["cheat"]                           # Changes the player's kart

dynamic_linking = ["bevy/dynamic_linking"]

debug_all = ["debug_input", "debug_screen_all", "cheat_all", "dynamic_linking"]
